@@ -6,8 +6,11 @@ integration seams and the packaging change.
 
 ## Linux
 
-Distributed as a Flatpak (`packaging/flatpak/`) and as the fat jar built by
-`mvn package`. The Flatpak sandbox is the recommended path for end users.
+Distributed as a Flatpak (`packaging/flatpak/`), as a **Rocky Linux 10 RPM** built with
+jpackage (the `build-rpm` job in `.github/workflows/release.yml` runs inside a
+`rockylinux:10` container so the RPM's dependency metadata is native to that distro), and
+as the fat jar built by `mvn package`. The Flatpak is the recommended path on non-RHEL
+distros; the RPM bundles a Temurin JRE, so neither needs a system Java.
 
 ```mermaid
 --8<-- "architecture/model/generated/deployment-linux.mmd"
@@ -25,6 +28,20 @@ Distributed as a Flatpak (`packaging/flatpak/`) and as the fat jar built by
   already sets. `packaging/install-desktop-integration.sh` installs the icon and a
   `StartupWMClass=jterm` `.desktop` file so GNOME associates the running window
   with the installer.
+
+    The **RPM** needs both halves supplied explicitly, because the jpackage launcher
+    starts the app in classpath mode (`app.classpath`/`app.mainclass` in `jterm.cfg`),
+    where jar-manifest attributes are ignored: the `build-rpm` job passes
+    `--java-options "--add-opens=java.desktop/sun.awt.X11=ALL-UNNAMED"` and swaps in
+    `packaging/rpm/jterm.desktop` (a jpackage resource override with
+    `StartupWMClass=jterm`) via `--resource-dir`. Remove either and GNOME shows two
+    dock icons — one for the window, one for the launcher.
+
+    The same resource dir also overrides the RPM spec (`packaging/rpm/jterm.spec`, based
+    on JDK 21's `template.spec`): its `%install` relocates the generated desktop entry
+    to an RPM-owned `/usr/share/applications/jterm.desktop`, replacing the stock
+    `xdg-desktop-menu` scriptlets that copied `jterm-jterm.desktop` untracked into
+    `/usr/local/share/applications`.
 
 ## Windows
 
